# crwrite-v1

./: .gitignore  README.md  build_local.bat  package-lock.json  package.js  package.json  publish.js  vcpkg.txt
.github/workflows/: release.yml
UI/: package-lock.json  package.json
UI/Drivers/: README.txt
UI/Drivers/328p/: ArduinoAsSPI.hex
UI/Drivers/AVRdude/: README.txt  avrdude.conf
UI/Drivers/Arduino/: README.txt  install.bat
UI/app/: .gitignore  index.html  loading.html
UI/app/Walkthrough/: walkthrough.css  walkthrough.js
UI/app/static/img/: coastrunner-icon.icns
UI/app/static/img/CR Animations/: Corner 1.webm  Corner 10.webm  Corner 11.webm  Corner 12.webm  Corner 13.webm  Corner 14.webm  Corner 15.webm  Corner 16.webm  Corner 2.webm  Corner 3.webm  Corner 4.webm  Corner 5.webm  Corner 6.webm  Corner 7.webm  Corner 8.webm  Corner 9.webm  Pocket 1.webm  Pocket 2.webm  Protrusion.webm  Tap Bottom - Circle (In).webm  Tap Bottom - Circle(Out).webm  Tap Bottom - Square (In).webm  Tap Bottom - Square (Out).webm  Tap Left - Circle (In).webm  Tap Left - Circle(Out).webm  Tap Left - Square (In).webm  Tap Left Square (Out).webm  Tap Right - Circle (In).webm  Tap Right - Circle(Out).webm  Tap Right - Square (In).webm  Tap Right - Square (Out).webm  Tap Top - Circle (In).webm  Tap Top - Circle(Out).webm  Tap Top - Square (In).webm  Tap Top - Square (Out).webm  tap bottom of circle (outside).webm  tap left of circle (outside).webm  tap right of circle (outside).webm  tap top of circle (outside).webm
UI/config/: app_coastrunner.json  env_developmentCoastRunner.json  env_productionCoastRunner.json
UI/e2e/: hello_world.e2e.js  utils.js
UI/resources/: coastrunner-icon.icns
UI/scripts/: notarize.js  startCoastRunner.js  webpack.app.config.js  webpack.base.config.js  webpack.config.dev.js  webpack.config.prod.js
UI/src/: index.js  webpack-server.js
UI/src/Common/Models/: FirmwareUpdate.js  Settings.js
UI/src/Main/: CNCController.js  Global.js  Updater.js
UI/src/Main/API/: APIUtility.js  CNCMillAPI.js  FileAPI.js  FirmwareAPI.js  JobsAPI.js  LogsAPI.js  SettingsAPI.js  SupportAPI.js  WalkthroughAPI.js
UI/src/Renderer/: App.js  Routes.js  renderApp.js
UI/src/Renderer/components/ActionPanel/: ActionPanel.js
UI/src/Renderer/components/BackgroundPhoto/: BackgroundPhoto.js
UI/src/Renderer/components/BottomToolbar/: BottomToolbar.js
UI/src/Renderer/components/CoastRunnerLogo/: CoastRunnerLogo.js
UI/src/Renderer/components/ColoredProgressBar/: ColoredProgressBar.js  index.js
UI/src/Renderer/components/Feedrate/: Feedrate.js
UI/src/Renderer/components/ImageRaw/: ImageRaw.js  ImageRaw.scss
UI/src/Renderer/components/ItemPanel/: ItemPanel.js
UI/src/Renderer/components/PauseButton/: PauseButton.js
UI/src/Renderer/components/RunButton/: RunButton.js
UI/src/Renderer/components/SVGPath/: SVGPath.css  SVGPath.js
UI/src/Renderer/components/Status/: Status.js
UI/src/Renderer/styles/: global.scss
UI/src/Renderer/util/: ScrollToTop.js  TransformToInput.js
custom-triplets/: x64-osx_b.cmake
docs/: BUILD.md
src/: CMakeLists.txt  MillDaemon.cpp  MillDaemon.h  MillTest.cpp  MillUtil.cpp  NodeWrapper.cpp
src/CMake/: FindFilesystem.cmake
src/CMake/Hunter/: config.cmake
src/Common/: CMakeLists.txt  CommonHeaders.h  Defs.h  FileDownloader.cpp  FileDownloader.h  Logger.cpp  Logger.h  ThreadManager.cpp  ThreadManager.h
src/Common/Models/: Axis.h  Measurement.h  Progress.h  Range.h  URL.h
src/Common/Util/: CR_Utils.h  CommonTypes.h  FileUtil.cpp  FileUtil.h  JsonUtil.h  MathUtil.h  OSUtil.cpp  OSUtil.h  Queue_Threadsafe.h  StringUtil.h
src/Files/: CMakeLists.txt  CRException.cpp  CRException.h  CRFile.cpp  CRFile.h  GCodeFile.cpp  GCodeFile.h  GCodeLine.cpp  GCodeLine.h  archive.cpp  archive.h  job.cpp  job.h  manifest.cpp  manifest.h  operation.cpp  operation.h  yaml.cpp  yaml.h
src/Mill/: CMakeLists.txt  CNCMill.h  MillConnector.cpp  MillConnector.h  MillErrorHandler.cpp  MillErrorHandler.h  MillException.cpp  MillException.cpp.old  MillException.h  MillException.h.old  MillFinder.h  MillFinder_linux.cpp  MillFinder_osx.cpp  MillFinder_win.cpp  MillingManager.cpp  MillingManager.h
src/Mill/Display/: CMakeLists.txt  LineType.h  MillDisplayManager.cpp  MillDisplayManager.h
src/Mill/Drivers/: CMakeLists.txt  drivers.cpp  drivers.h
src/Mill/Firmware/: AVRDude.cpp  AVRDude.h  CMakeLists.txt  FirmwareManager.cpp  FirmwareManager.h  FirmwareUpdater.cpp  FirmwareUpdater.h  FirmwareVersion.cpp  FirmwareVersion.h
src/Mill/GRBL/: Buffer.h  CMakeLists.txt  ConnectionState.h  MillConnection.cpp  MillConnection.h  MillWriter.cpp  MillWriter.h  Mock_GRBL.cpp  Mock_GRBL.h  Mock_GRBL_Status.cpp  Mock_GRBL_Status.h  PositionAccumulator.cpp  PositionAccumulator.h  Regex.h  SerialConnection.cpp  SerialConnection.h  SerialConnection_windows.cpp
src/Mill/GRBL/Commands/: ContourMapping.cpp  ContourMapping.h  M100.cpp  M100.h  M101.cpp  M101.h  M102.h  M102.tpp  M106.cpp  M106.h
src/Mill/GRBL/Jogging/: JogDirection.h  JogManager.cpp  JogManager.h
src/Mill/GRBL/Protocol/: Protocol.cpp  Protocol.h
src/Mill/GRBL/Settings/: FeedRate.h  MillSettings.h  SoftLimits.h
src/Mill/GRBL/Status/: BufferState.h  LimitSwitchState.h  RealTimeCoordinates.h  RealTimePosition.h  RealTimeRates.h  RealTimeStatus.h
src/Mill/Status/: ConnectionStatus.h  MillingError.cpp  MillingError.h  MillingStatus.h
src/NAPI/: NapiArgs.h  NapiException.h  NapiService.h  NapiUtil.h
src/NAPI/Services/: CustomerSupportService.h  FirmwareUpdates.h  InitializeService.h
src/NAPI/Types/: NapiArray.h  NapiBool.h  NapiDouble.h  NapiInt32.h  NapiObject.h  NapiString.h  NapiUInt32.h  NapiValue.h
src/Services/: CMakeLists.txt  CustSupportService.cpp  CustSupportService.h  FirmwareUpdateService.cpp  FirmwareUpdateService.h
src/Services/Client/: RestClient.cpp  RestClient.h
src/Services/Models/: AvailableFirmware.cpp  AvailableFirmware.h
src/Settings/: CMakeLists.txt  JogKeys.h  Setting.h  SettingManager.cpp  SettingManager.h  WalkthroughType.h
(+74 files in other folders)
